## Process this file with automake to produce Makefile.in

SUBDIRS = tutorial faq reference

EXTRA_DIST = \
	debugging.txt			\
	defsformat.txt			\
	developers.txt			\
	dnd_internals.txt		\
	make-todo			\
	refcounting.txt			\
	sizing-test.txt			\
	styles.txt			\
	text_widget.txt 		\
	tree-column-sizing.txt		\
	widget_geometry.txt		\
	widget_system.txt 		\
	generation.txt			\
	gtkdocs_fix

