## Process this file with automake to produce Makefile.in
include $(top_srcdir)/Makefile.decl

SUBDIRS = reference tools

EXTRA_DIST += \
	CODING-STYLE			\
	developers.txt			\
	dnd_internals.txt		\
	focus_tracking.txt		\
	gtkdocs_fix			\
	make-todo			\
	RELEASE-HOWTO			\
	sizing-test.txt			\
	styles.txt			\
	text_widget_internals.txt	\
	tree-column-sizing.png		\
	tree-column-sizing.txt		\
	widget_geometry.txt		\
	widget_system.txt

-include $(top_srcdir)/git.mk
