## Process this file with automake to produce Makefile.in
include $(top_srcdir)/Makefile.decl

SUBDIRS = tutorial faq reference tools

EXTRA_DIST += \
	defsformat.txt			\
	developers.txt			\
	dnd_internals.txt		\
	make-todo			\
	refcounting.txt			\
	sizing-test.txt			\
	styles.txt			\
	text_widget.txt 		\
	text_widget_internals.txt	\
	tree-column-sizing.txt		\
	widget_geometry.txt		\
	widget_system.txt 		\
	generation.txt			\
	gtkdocs_fix			\
	RELEASE-HOWTO

-include $(top_srcdir)/git.mk
